--- a/assets/css/frontend/style.css
+++ b/assets/css/frontend/style.css
@@ -773,14 +773,14 @@ blockquote p:after {
     font-family: 'Montserrat';
     font-size: 14px;
     text-transform: capitalize;
-    font-weight: normal;
+    font-weight: bold;
     padding: 15px 10px
 }
 .tab-price table tr td {
     padding: 15px 10px;
     border: 2px solid #333;
     font-family: 'Montserrat';
-    font-size: 16px;
+    font-size: 13px;
     color: #333333;
     text-align: center;
     position: relative
@@ -7669,7 +7669,7 @@ blockquote p:after {
     color: #fff
 }
 .reservation-room .reservation-room_item {
-    margin-top: 45px
+    margin-top: 15px
 }
 .reservation-room .reservation-room_item:first-child {
     margin-top: 0
@@ -7678,11 +7678,18 @@ blockquote p:after {
     overflow: hidden
 }
 .reservation-room_item .reservation-room_name {
-    color: #232323;
-    text-transform: uppercase;
+    font-size: 20px;
+    display: block;
+    color: #333333;
     font-weight: bold;
-    margin: 0;
-    font-size: 24px
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+    padding: 10px 20px;
+    background-color: #f1f1f1;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease
 }
 .reservation-room_item .reservation-room_name a {
     color: #232323;
@@ -7698,14 +7705,14 @@ blockquote p:after {
     float: left;
     margin-right: 30px;
     width: 370px;
-    margin-top: 25px
+    margin-top: 15px
 }
 .reservation-room_item .reservation-room_img img {
     width: 100%
 }
 .reservation-room_item .reservation-room_text {
     overflow: hidden;
-    margin-top: 25px
+    margin-top: 15px
 }
 .reservation-room_item .reservation-room_text .reservation-room_desc {
     color: #333333
@@ -7759,7 +7766,7 @@ blockquote p:after {
     font-size: 30px
 }
 .reservation-room_item .reservation-room_text .awe-btn {
-    margin-left: 30px;
+    /*margin-left: 30px;*/
     min-width: 120px
 }
 .reservation-room_item .reservation-room_package {
@@ -7800,17 +7807,16 @@ blockquote p:after {
 }
 .reservation-package_item .reservation-package_img {
     float: left;
-    width: 100px;
-    margin-right: 30px
+    width: 100%;
+    margin-right: 15px
 }
 .reservation-package_item .reservation-package_img img {
     width: 100%
 }
 .reservation-package_item .reservation-package_text {
     overflow: hidden;
-    padding-right: 130px;
     position: relative;
-    min-height: 72px
+    min-height: 100px
 }
 .reservation-package_item .reservation-package_text h4 {
     text-transform: uppercase;
@@ -7832,7 +7838,6 @@ blockquote p:after {
     color: #898989;
     font-size: 12px;
     margin-bottom: 0;
-    margin-top: 10px
 }
 .reservation-package_item .reservation-package_text p b {
     color: #232323
@@ -7844,7 +7849,7 @@ blockquote p:after {
 }
 .reservation-package_item .reservation-package_text .reservation-package_book-price .reservation-package_price {
     color: #333333;
-    text-align: right
+/*    text-align: right*/
 }
 .reservation-package_item .reservation-package_text .reservation-package_book-price .reservation-package_price .amout {
     font-weight: bold;
@@ -7852,6 +7857,25 @@ blockquote p:after {
     line-height: 1;
     font-family: 'Montserrat'
 }
+
+.reservation-package_item .reservation-package_text .reservation-package_price a{
+    display: inline-block;
+    clear: both;
+    color: #121213;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 5px 0;
+    cursor: pointer;
+}
+.reservation-package_item .reservation-package_text .reservation-package_price a:hover{
+    display: inline-block;
+    clear: both;
+    color: #e1bd85;
+    font-size: 12px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .reservation-package_item .reservation-package_text .reservation-package_book-price .awe-btn {
     padding: 5px 10px;
     min-width: inherit;
@@ -8496,7 +8520,7 @@ blockquote p:after {
         display: none
     }
     .sidebar {
-        margin-top: 70px
+        margin-top: 10px
     }
     .sidebar .widget.widget_check_availability .check_availability .awe-btn {
         max-width: 250px;
@@ -9519,11 +9543,11 @@ blockquote p:after {
         padding: 12px 15px
     }
     .reservation-package_item {
-        padding: 15px;
+        /*padding: 15px;*/
         border-bottom: 1px solid #f1f1f1
     }
     .reservation-package_item .reservation-package_img {
-        display: none
+        /*display: none*/
     }
     .reservation-package_item .reservation-package_text {
         padding-right: 0
@@ -9781,3 +9805,4 @@ blockquote p:after {
     margin-top: 15px
 }
 /*# sourceMappingURL=style.css.map */
+
