--- a/assets/css/frontend/style.css
+++ b/assets/css/frontend/style.css
@@ -26,7 +26,7 @@ body {
 p {
     line-height: 1.7em;
     letter-spacing: .02em;
-    font-size: 15px
+    font-size: 13px
 }
 input,
 textarea {
@@ -7799,6 +7799,7 @@ blockquote p:after {
 .reservation-package_item {
     overflow: hidden;
     padding: 20px 30px;
+    margin: 5px 0;
     background-color: #fbfbfb;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
@@ -7913,8 +7914,8 @@ blockquote p:after {
     margin-top: 30px
 }
 .reservation-billing-detail {
-    margin-left: 80px;
-    max-width: 570px
+    margin-left: 10px;
+/*    max-width: 570px*/
 }
 .reservation-billing-detail .reservation-login {
     margin-bottom: 0;
@@ -7951,6 +7952,26 @@ blockquote p:after {
     margin-top: 20px;
     margin-bottom: 10px
 }
+.reservation-billing-detail .reservation-package_item .left {
+    color: #232323;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 20px
+}
+
+.reservation-billing-detail .reservation-package_item .right {
+    color: #232323;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 20px
+}
+
 .reservation-billing-detail label sup {
     color: #ff0000;
     font-style: 12px
